[gd_scene load_steps=13 format=4 uid="uid://c3lhg6nuk73lf"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_aaku1"]
[ext_resource type="TileSet" uid="uid://irv611xvnrml" path="res://data/tileset.tres" id="2_tql01"]
[ext_resource type="Texture2D" uid="uid://dmkrt57y8l2v7" path="res://sprites/singles/hole.png" id="3_6t12a"]
[ext_resource type="Texture2D" uid="uid://phv16ass0ipi" path="res://sprites/singles/water_splash_1.png" id="4_rjnys"]
[ext_resource type="Texture2D" uid="uid://w1cdgpv88xv0" path="res://sprites/singles/water_splash_2.png" id="5_74uuq"]
[ext_resource type="Texture2D" uid="uid://bg4n5khgqsivk" path="res://sprites/singles/water_splash_4.png" id="6_cemd1"]
[ext_resource type="Texture2D" uid="uid://cbqnkmebqkxup" path="res://sprites/singles/water_splash_3.png" id="7_3hhxe"]
[ext_resource type="Texture2D" uid="uid://5l2xj3veah7b" path="res://sprites/singles/water_splash_5.png" id="8_o680e"]
[ext_resource type="PackedScene" uid="uid://df3bfqo5mu12a" path="res://scenes/ball.tscn" id="9_ehllv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_28stg"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrk1y"]
size = Vector2(32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k2lkl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rjnys")
}, {
"duration": 1.0,
"texture": ExtResource("5_74uuq")
}, {
"duration": 1.0,
"texture": ExtResource("6_cemd1")
}, {
"duration": 1.0,
"texture": ExtResource("7_3hhxe")
}, {
"duration": 1.0,
"texture": ExtResource("8_o680e")
}],
"loop": false,
"name": &"splash",
"speed": 5.0
}]

[node name="Level7" type="Node2D"]
script = ExtResource("1_aaku1")
par = 3

[node name="Map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAUAAAAEAAAAAAAHAAYAAAAAAAQAAFAIAAcAAAACAAAAAAAJAAgAAAACAAAAAAAKAAQAAAAEAAAAAAAGAAMAAAAEAAAAAAAHAAMAAAAEAAAAAAAGAAQAAAAEAAAAAAAHAAQAAAAEAAAAAAAHAAUAAAAEAAAAAAAIAAYAAAAAAAQAAFAKAAUAAAAEAAAAAAAKAAYAAAAEAAQAAFAKAAgAAAAAAAQAADALAAYAAAAEAAAAAAAFAAIAAAAEAAAAAAAIAAIAAAAEAAAAAAAFAAYAAAAAAAAAAAAGAAcAAAACAAMAADAHAAgAAAACAAMAAAAIAAkAAAAAAAQAAAAFAAQAAAAEAAAAAAAIAAQAAAAEAAAAAAAIAAUAAAAEAAAAAAAJAAUAAAAEAAAAAAAJAAQAAAAEAAAAAAAJAAMAAAAEAAAAAAAIAAMAAAAEAAAAAAAHAAIAAAAEAAAAAAAGAAIAAAAEAAAAAAAFAAMAAAAEAAAAAAAFAAUAAAAEAAAAAAAGAAYAAAAAAAAAAAAHAAcAAAACAAAAAAAIAAgAAAAAAAUAAGAJAAkAAAADAAAAAAAKAAMAAAAEAAAAAAAMAAkAAAAEAAAAAAAMAAcAAAAEAAAAAAAMAAgAAAAEAAAAAAAKAAkAAAAAAAQAADALAAgAAAAEAAAAAAALAAcAAAAEAAAAAAAAAAAAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAAAAcAAAAEAAAAAAAAAAgAAAAEAAAAAAAAAAkAAAAEAAAAAAAAAAoAAAAEAAAAAAAAAAsAAAAEAAAAAAAAAAwAAAAEAAAAAAAAAA0AAAAEAAAAAAAAAA4AAAAEAAAAAAABAAAAAAAEAAAAAAABAAEAAAAEAAAAAAABAAIAAAAEAAAAAAABAAMAAAAEAAAAAAABAAQAAAAEAAAAAAABAAUAAAAEAAAAAAABAAYAAAAEAAAAAAABAAcAAAAEAAAAAAABAAgAAAAEAAAAAAABAAkAAAAEAAAAAAABAAoAAAAEAAAAAAABAAsAAAAEAAAAAAABAAwAAAAEAAAAAAABAA0AAAAEAAAAAAABAA4AAAAEAAAAAAACAAAAAAAEAAAAAAACAAEAAAAEAAAAAAACAAIAAAAEAAAAAAACAAMAAAAEAAAAAAACAAQAAAAEAAAAAAACAAUAAAAEAAAAAAACAAYAAAAEAAAAAAACAAcAAAAEAAAAAAACAAgAAAAEAAAAAAACAAkAAAAEAAAAAAACAAoAAAAEAAAAAAACAAsAAAAEAAAAAAACAAwAAAAEAAAAAAACAA0AAAAEAAAAAAACAA4AAAAEAAAAAAADAAAAAAAEAAAAAAADAAEAAAAEAAAAAAADAAIAAAAEAAAAAAADAAMAAAAEAAAAAAADAAQAAAAEAAAAAAADAAUAAAAEAAAAAAADAAYAAAAEAAAAAAADAAcAAAAEAAAAAAADAAgAAAAEAAAAAAADAAkAAAAEAAAAAAADAAoAAAAEAAAAAAADAAsAAAAEAAAAAAADAAwAAAAEAAAAAAADAA0AAAAEAAAAAAADAA4AAAAEAAAAAAAEAAAAAAAEAAAAAAAEAAEAAAAEAAAAAAAEAAIAAAAEAAAAAAAEAAMAAAAEAAAAAAAEAAQAAAAEAAAAAAAEAAUAAAAEAAAAAAAEAAYAAAAEAAQAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAQAAAAEAAoAAAAAAAQAAAAEAAsAAAAAAAQAAAAEAAwAAAAAAAQAAAAEAA0AAAAEAAQAAGAEAA4AAAAEAAAAAAAFAAAAAAAEAAAAAAAFAAEAAAAEAAAAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAIAAAAAAAEAAAAAAAIAAEAAAAEAAAAAAAJAAAAAAAEAAAAAAAJAAEAAAAEAAAAAAAKAAAAAAAEAAAAAAAKAAEAAAAEAAAAAAALAAAAAAAEAAAAAAALAAEAAAAEAAAAAAAMAAAAAAAEAAAAAAAMAAEAAAAEAAAAAAANAAAAAAAEAAAAAAANAAEAAAAEAAAAAAAOAAAAAAAEAAAAAAAOAAEAAAAEAAAAAAAPAAAAAAAEAAAAAAAPAAEAAAAEAAAAAAAQAAAAAAAEAAAAAAAQAAEAAAAEAAAAAAARAAAAAAAEAAAAAAARAAEAAAAEAAAAAAASAAAAAAAEAAAAAAASAAEAAAAEAAAAAAATAAAAAAAEAAAAAAATAAEAAAAEAAAAAAANAAIAAAAEAAAAAAANAAMAAAAEAAAAAAANAAQAAAAEAAAAAAANAAUAAAAEAAAAAAANAAYAAAAEAAAAAAANAAcAAAAEAAAAAAANAAgAAAAEAAIAAAANAAkAAAAEAAAAAAANAAoAAAAEAAAAAAANAAsAAAAEAAAAAAANAAwAAAAEAAAAAAANAA0AAAAEAAAAAAANAA4AAAAEAAAAAAAOAAIAAAAEAAAAAAAOAAMAAAAEAAAAAAAOAAQAAAAEAAAAAAAOAAUAAAAEAAAAAAAOAAYAAAAEAAAAAAAOAAcAAAAEAAAAAAAOAAgAAAAEAAAAAAAOAAkAAAAEAAAAAAAOAAoAAAAEAAUAAAAOAAwAAAAEAAAAAAAOAA0AAAAEAAAAAAAOAA4AAAAEAAAAAAAPAAIAAAAEAAAAAAAPAAMAAAAEAAAAAAAPAAQAAAAEAAAAAAAPAAUAAAAEAAAAAAAPAAYAAAAEAAAAAAAPAAcAAAAEAAAAAAAPAAgAAAAEAAAAAAAPAAkAAAAEAAAAAAAPAAoAAAAEAAUAAGAPAAwAAAAEAAAAAAAPAA0AAAAEAAAAAAAPAA4AAAAEAAAAAAAQAAIAAAAEAAAAAAAQAAMAAAAEAAAAAAAQAAQAAAAEAAAAAAAQAAUAAAAEAAAAAAAQAAYAAAAEAAAAAAAQAAcAAAAEAAAAAAAQAAgAAAAEAAIAAAAQAAkAAAAEAAAAAAAQAAoAAAAEAAAAAAAQAAsAAAAEAAAAAAAQAAwAAAAEAAAAAAAQAA0AAAAEAAAAAAAQAA4AAAAEAAAAAAARAAIAAAAEAAAAAAARAAMAAAAEAAAAAAARAAQAAAAEAAAAAAARAAUAAAAEAAAAAAARAAYAAAAEAAAAAAARAAcAAAAEAAAAAAARAAgAAAAEAAAAAAARAAkAAAAEAAAAAAARAAoAAAAEAAAAAAARAAsAAAAEAAAAAAARAAwAAAAEAAAAAAARAA0AAAAEAAAAAAARAA4AAAAEAAAAAAASAAIAAAAEAAAAAAASAAMAAAAEAAAAAAASAAQAAAAEAAAAAAASAAUAAAAEAAAAAAASAAYAAAAEAAAAAAASAAcAAAAEAAAAAAASAAgAAAAEAAAAAAASAAkAAAAEAAAAAAASAAoAAAAEAAAAAAASAAsAAAAEAAAAAAASAAwAAAAEAAAAAAASAA0AAAAEAAAAAAASAA4AAAAEAAAAAAATAAIAAAAEAAAAAAATAAMAAAAEAAAAAAATAAQAAAAEAAAAAAATAAUAAAAEAAAAAAATAAYAAAAEAAAAAAATAAcAAAAEAAAAAAATAAgAAAAEAAAAAAATAAkAAAAEAAAAAAATAAoAAAAEAAAAAAATAAsAAAAEAAAAAAATAAwAAAAEAAAAAAATAA0AAAAEAAAAAAATAA4AAAAEAAAAAAAFAAoAAAABAAAAAAAFAAsAAAABAAAAAAAFAAwAAAABAAAAAAAFAA0AAAAAAAQAAGAFAA4AAAAEAAAAAAAGAAoAAAABAAAAAAAGAAsAAAABAAAAAAAGAAwAAAABAAAAAAAGAA0AAAAAAAQAAGAGAA4AAAAEAAAAAAAHAAoAAAAAAAQAADAHAAsAAAAAAAQAADAHAAwAAAAAAAQAADAHAA0AAAAEAAQAADAHAA4AAAAEAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAEAAAAAAAIAAwAAAAEAAAAAAAIAA0AAAAEAAAAAAAIAA4AAAAEAAAAAAAJAAoAAAAAAAQAAGAJAAsAAAAEAAAAAAAJAAwAAAAEAAAAAAAJAA0AAAAEAAAAAAAJAA4AAAAEAAAAAAAKAAoAAAAEAAQAADAKAAsAAAAEAAAAAAAKAAwAAAAEAAAAAAAKAA0AAAAEAAAAAAAKAA4AAAAEAAAAAAALAAoAAAAEAAAAAAALAAsAAAAEAAAAAAALAAwAAAAEAAAAAAALAA0AAAAEAAAAAAALAA4AAAAEAAAAAAAMAAoAAAAEAAAAAAAMAAsAAAAEAAAAAAAMAAwAAAAEAAAAAAAMAA0AAAAEAAAAAAAMAA4AAAAEAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAACAAMAADAFAAkAAAADAAAAAAAGAAgAAAACAAAAAAAGAAkAAAADAAAAAAAHAAkAAAAAAAQAADAJAAIAAAAEAAAAAAAKAAIAAAAEAAAAAAALAAIAAAAEAAAAAAAMAAIAAAAEAAAAAAAMAAMAAAAEAAAAAAAMAAQAAAAEAAAAAAAMAAUAAAAEAAAAAAAMAAYAAAAEAAAAAAALAAMAAAAEAAAAAAALAAQAAAAEAAAAAAALAAkAAAAEAAAAAAALAAUAAAAEAAAAAAAOAAsAAAAEAAAAAAAPAAsAAAAEAAAAAAAJAAcAAAACAAUAADAJAAYAAAAAAAYAAFAKAAcAAAAAAAYAABA=")
tile_set = ExtResource("2_tql01")

[node name="Hole" type="Area2D" parent="."]
position = Vector2(305, 272)
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="Hole"]
texture = ExtResource("3_6t12a")

[node name="Hitbox" type="CollisionShape2D" parent="Hole"]
scale = Vector2(0.25, 0.25)
shape = SubResource("CircleShape2D_28stg")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="SFX2" type="AudioStreamPlayer2D" parent="."]

[node name="SFX3" type="AudioStreamPlayer2D" parent="."]

[node name="SFXEnd" type="AudioStreamPlayer2D" parent="."]

[node name="Obstacles" type="Node2D" parent="."]

[node name="Water" type="Area2D" parent="Obstacles"]

[node name="Collision" type="CollisionPolygon2D" parent="Obstacles/Water"]
position = Vector2(586, -122)
polygon = PackedVector2Array(171, 369, 132, 367, 132, 326, 117, 305, 101, 299, 100, 269, 170, 280)

[node name="Ice" type="Area2D" parent="Obstacles"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Obstacles/Ice"]
polygon = PackedVector2Array(163, 288, 224, 288, 254, 256, 288, 256, 288, 288, 320, 288, 320, 248, 315, 236, 305, 227, 296, 224, 224, 224)

[node name="Sand" type="Area2D" parent="Obstacles"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sand"]
position = Vector2(192, 304)
shape = SubResource("RectangleShape2D_lrk1y")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Obstacles/Sand"]
position = Vector2(304, 304)
shape = SubResource("RectangleShape2D_lrk1y")

[node name="WaterSplash" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(142, 331)
sprite_frames = SubResource("SpriteFrames_k2lkl")
animation = &"splash"
frame = 4
frame_progress = 1.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="LevelEntered" type="Timer" parent="."]

[node name="Ball" parent="." instance=ExtResource("9_ehllv")]
position = Vector2(194, 398)
floor_stop_on_slope = false
floor_block_on_wall = false

[connection signal="body_entered" from="Hole" to="." method="_on_hole_body_entered"]
[connection signal="body_exited" from="Hole" to="." method="_on_hole_body_exited"]
[connection signal="body_entered" from="Obstacles/Water" to="." method="_on_water_body_entered"]
[connection signal="body_entered" from="Obstacles/Ice" to="." method="_on_ice_body_entered"]
[connection signal="body_exited" from="Obstacles/Ice" to="." method="_on_ice_body_exited"]
[connection signal="body_entered" from="Obstacles/Sand" to="." method="_on_sand_body_entered"]
[connection signal="body_exited" from="Obstacles/Sand" to="." method="_on_sand_body_exited"]
